--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
         dolor. Purus urna in sit nullam proin. </p>
     </div>
     <!-- Club perfomence section -->
-    <section class="text-center content-center py-10 gap-7">
+    <section class="text-center content-center py-10 gap-7 border-dotted border-y-2 border-gray-400 px-2 lg:px-7">
       <h3 class="text-4xl font-bold">Professional Hockeys Club</h3>
       <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam
         proin. </p>
     </section>
     <section>
       <!-- parcentage section  -->
-      <div class="flex lg:flex-row">
+      <div class="flex flex-col text-center py-7 px-3 lg:flex-row px-2 lg:px-7 py-32">
         <div >
           <div class="radial-progress text-red-500 text-primary" style="--value:87;" role="progressbar">87%</div>
           <h2>Prayer Facility</h2>
@@ -153,7 +153,7 @@
     </section>
     <!-- Program Sections  -->
     <section>
-      <div class="text-center space-y-4 py-6">
+      <div class="text-center space-y-4 py-6 border-dotted border-y-2 border-gray-400">
         <h3 class="text-4xl font-bold">
           Program Sections
         </h3>
@@ -205,7 +205,7 @@
     </section>
 
     <!-- Products section  -->
-    <section class="text-center lg:py-7">
+    <section class="text-center lg:py-7 border-dotted border-y-2 border-gray-400">
       <h3 class="mb-5 text-4xl font-bold">
         Our New Products
       </h3>
@@ -254,7 +254,7 @@
         </div>
         <div class="hero min-h-screen rounded-2xl border-2 border-black">
           <div class="hero-content flex-col lg:flex-row">
-            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <img src="Images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
               <div class="flex gap-2 py-1 text-slate-400">
                 <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -291,7 +291,7 @@
         </div>
         <div class="hero min-h-screen rounded-2xl border-2 border-black">
           <div class="hero-content flex-col lg:flex-row">
-            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <img src="Images/7.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
               <div class="flex gap-2 py-1 text-slate-400">
                 <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -328,7 +328,7 @@
         </div>
         <div class="hero min-h-screen rounded-2xl border-2 border-black">
           <div class="hero-content flex-col lg:flex-row">
-            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <img src="Images/8.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
               <div class="flex gap-2 py-1 text-slate-400">
                 <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -365,7 +365,7 @@
         </div>
         <div class="hero min-h-screen rounded-2xl border-2 border-black">
           <div class="hero-content flex-col lg:flex-row">
-            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <img src="Images/9.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
               <div class="flex gap-2 py-1 text-slate-400">
                 <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -402,7 +402,7 @@
         </div>
         <div class="hero min-h-screen rounded-2xl border-2 border-black">
           <div class="hero-content flex-col lg:flex-row">
-            <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+            <img src="Images/10.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
               <div class="flex gap-2 py-1 text-slate-400">
                 <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -442,27 +442,27 @@
     </section>
     <!-- Clients Question -->
     <section>
-      <div class="text-center py-7 ">
+      <div class="text-center py-7 border-dotted border-y-2 border-gray-400 ">
         <h3 class="mb-5 text-4xl font-bold">Clients Question</h3>
         <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
       </div>
-      <div class="flex flex-col lg:flex-row border-2 justify-around border-gray-300 p-7">
+      <div class="flex flex-col lg:flex-row border-2 justify-around border-gray-300 rounded-3xl p-7">
         <div>
           <img src="Images/11.png" alt="">
         </div>
        <div>
-          <div class=""><div class="collapse collapse-plus  border-y-2 border-y-slate-200">
+          <div class=""><div class="collapse collapse-plus  ">
             <input type="radio" name="my-accordion-3" checked="checked" /> 
-            <div class="collapse-title text-xl font-semibold">
+            <div class="collapse-title text-2xl font-semibold">
               Our Equipment
             </div>
             <div class="collapse-content"> 
               <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
             </div>
           </div>
-          <div class="collapse collapse-plus ">
+          <div class="collapse collapse-plus border-y-2 rounded-none border-y-slate-200">
             <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-semibold">
+            <div class="collapse-title text-2xl font-semibold">
               Hockey Training
             </div>
             <div class="collapse-content"> 
@@ -471,25 +471,25 @@
           </div>
           <div class="collapse collapse-plus ">
             <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-semibold">
+            <div class="collapse-title text-2xl font-semibold">
               Private Lessons
             </div>
             <div class="collapse-content"> 
               <p>hello</p>
             </div>
           </div></div>
-          <div class="collapse collapse-plus ">
+          <div class="collapse collapse-plus border-y-2 rounded-none border-y-slate-200">
             <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-semibold">
+            <div class="collapse-title text-2xl font-semibold">
               Ski Touring
             </div>
             <div class="collapse-content"> 
               <p>hello</p>
             </div>
           </div>
-          <div class="collapse collapse-plus ">
+          <div class="collapse collapse-plus border-b-2 rounded-none border-y-slate-200">
             <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-semibold">
+            <div class="collapse-title text-2xl font-semibold">
               Booking
             </div>
             <div class="collapse-content"> 
@@ -498,7 +498,7 @@
           </div>
           <div class="collapse collapse-plus ">
             <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-semibold">
+            <div class="collapse-title text-2xl font-semibold">
               Pricings
             </div>
             <div class="collapse-content"> 
@@ -507,6 +507,15 @@
           </div>
        </div>
         
+      </div>
+    </section>
+    <!-- Get in tech section  -->
+    <section class="border-dotted border-y-2 border-gray-400 ">
+      <div class="text-center lg:py-7">
+        <h3 class="mb-5 text-4xl font-bold">Get In Touch</h3>
+        <p>
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. 
+        </p>
       </div>
     </section>
   </main>
