added more element

--- a/index.html
+++ b/index.html
@@ -213,12 +213,13 @@
     </section>
 
     <!-- product price and review -->
-    <section class="lg:p-12">
-      <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-        <div class="hero  rounded-2xl border-2 h-fit border-gray-50">
+    <section class="p-5 lg:p-12">
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+        <div class="hero  rounded-2xl border-2 h-fit border-gray-200">
           <div class="hero-content flex-col lg:flex-row">
             <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
-            <div class="py-1">
+            <div class="">
+              <div class="py-1">
               <div class="flex gap-2 py-1 text-slate-400">
                 <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                   <g clip-path="url(#clip0_6_192)">
@@ -251,8 +252,9 @@
             </div>
             </div>
           </div>
+            </div>
         </div>
-        <div class="hero rounded-2xl h-fit border-2 border-gray-50">
+        <div class="hero rounded-2xl h-fit border-2 border-gray-200">
           <div class="hero-content flex-col lg:flex-row">
             <img src="Images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
@@ -289,7 +291,7 @@
             </div>
           </div>
         </div>
-        <div class="hero h-fit rounded-2xl border-2 border-gray-50">
+        <div class="hero h-fit rounded-2xl border-2 border-gray-200">
           <div class="hero-content flex-col lg:flex-row">
             <img src="Images/7.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
@@ -326,7 +328,7 @@
             </div>
           </div>
         </div>
-        <div class="hero h-fit rounded-2xl border-2 border-gray-50">
+        <div class="hero h-fit rounded-2xl border-2 border-gray-200">
           <div class="hero-content flex-col lg:flex-row">
             <img src="Images/8.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
@@ -363,7 +365,7 @@
             </div>
           </div>
         </div>
-        <div class="hero h-fit rounded-2xl border-2 border-gray-50">
+        <div class="hero h-fit rounded-2xl border-2 border-gray-200">
           <div class="hero-content flex-col lg:flex-row">
             <img src="Images/9.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
@@ -400,7 +402,7 @@
             </div>
           </div>
         </div>
-        <div class="hero h-fit rounded-2xl border-2 border-gray-50">
+        <div class="hero h-fit rounded-2xl border-2 border-gray-200">
           <div class="hero-content flex-col lg:flex-row">
             <img src="Images/10.png" class="max-w-sm rounded-lg shadow-2xl" />
             <div class="py-1">
