--- a/index.html
+++ b/index.html
@@ -92,27 +92,27 @@
     <div class="carousel w-full">
       <div id="slide1" class="carousel-item relative w-full py-16 px-5">
         <img src="Images/1.png" class="w-full" />
-        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 left-5 top-3/4 gap-7">
+        <div class="absolute flex transform -translate-y-1/2 justify-center lg:left-5  top-3/4 gap-7">
           <a href="#slide4" class="btn btn-circle">❮</a>
           <a href="#slide2" class="btn btn-circle">❯</a>
         </div>
       </div>
       <div id="slide2" class="carousel-item relative w-full ">
         <img src="Images/Boys Schools Finals 2022 1.jpg" class="w-full rounded-xl" />
-        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 left-5 gap-7 top-3/4">
+        <div class="absolute flex justify-center transform -translate-y-1/2 lg:left-5 gap-7 top-3/4">
           <a href="#slide1" class="btn btn-circle">❮</a>
           <a href="#slide3" class="btn btn-circle">❯</a>
         </div>
       </div>
 
     </div>
-    <div class="bg-[#131318] lg:absolute text-center  top-1/2 right-1/4 lg:w-96 h-40 p-7 rounded-3xl">
+    <div class="bg-[#131318] lg:absolute text-center m-4 p-9 top-1/2 right-1/4 lg:w-96 h-40  rounded-3xl">
       <h3 class="text-white lg:text-2xl font-monrope font-semibold ">Meet all the heroes from the field</h3>
       <p class="text-[#FFFFFF] text-sm lg:max-w-2/3 mx-auto">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat
         dolor. Purus urna in sit nullam proin. </p>
     </div>
     <!-- Club perfomence section -->
-    <section class="text-center content-center lg:space-y-7 lg:px-80 py-10 gap-7 border-dotted border-y-2 border-gray-400 px-2">
+    <section class="text-center content-center m-4 lg:space-y-7 lg:px-80 py-10 gap-7 border-dotted border-y-2 border-gray-400 px-2">
       <h3 class="text-4xl font-bold">Professional Hockeys Club</h3>
       <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam
         proin. </p>
@@ -162,7 +162,7 @@
     </section>
     <!-- Register section  -->
     <section>
-      <div class="lg:items-center justify-center m-auto space-y-4 lg:flex lg:gap-7 lg:space-y-0 rounded-3xl">
+      <div class="lg:items-center justify-center m-4 space-y-4 lg:flex lg:gap-7 lg:space-y-0 rounded-3xl">
         <!-- <div> -->
           <div class="hero rounded-3xl max-w-1/2" style="background-image: url('./Images/2.png');">
             <div class="hero-overlay bg-opacity-60"></div>
